# expectations

./: LICENSE.md  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
examples/: websockets-client.py  websockets-server.py
expectations/: __init__.py  core.py
