[tool.poetry]
name = "expectations"
version = "1.0.0"
description = "Asynchronous expectations (Jobs/tasks) for future events."
authors = ["TensorTom <14287229+TensorTom@users.noreply.github.com>"]
maintainers = ["TensorTom <14287229+TensorTom@users.noreply.github.com>"]
keywords = ["expectations",
            "expect",
            "python",
            "asyncio",
            "async",
            "asynchronous",
            "jobs",
            "tasks",
            "future"]
license = "MIT"
readme = "README.md"
repository = "https://localhost"

[tool.poetry.dependencies]
python = "^3.9"
aiojobs = "<1.0>"

[tool.poetry.dev-dependencies]
birdseye = "^0.8.3"
jupyter = "^1.0.0"
aiohttp = "<4.0"

[tool.dephell.main]
from = { format = "poetrylock", path = "poetry.lock" }
envs = ["main"]
to = { format = "setuppy", path = "setup.py" }

[tool.dephell.pip]
from = { format = "poetrylock", path = "poetry.lock" }
envs = ["main"]
to = { format = "pip", path = "requirements.txt" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
